add endpoint to list user books
